--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
 </head>
 <body>
+<a href="/" class="btn btn-secondary mb-3">Назад</a>
 <div class="container mt-5">
   <h2>Свяжитесь с нами</h2>
 
