--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,20 +1,34 @@
 <!DOCTYPE html>
-<html lang="ru" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Login</title>
+    <link rel="stylesheet" th:href="@{/css/style_auth.css}">
 </head>
 <body>
-<h2>Вход</h2>
-<form th:action="@{/login}" method="post">
-    <div>
-        <label>Имя пользователя</label>
-        <input type="text" name="username" required/>
-    </div>
-    <div>
-        <label>Пароль</label>
-        <input type="password" name="password" required/>
-    </div>
-    <button type="submit">Войти</button>
-</form>
+<div class="login-container">
+    <h2>Login</h2>
+    <form th:action="@{/login}" method="post">
+        <div>
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required>
+        </div>
+        <div>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required>
+        </div>
+        <div>
+            <button type="submit">Login</button>
+        </div>
+        <div th:if="${param.error}">
+            <p style="color:red;">Invalid username or password</p>
+        </div>
+        <div th:if="${param.logout}">
+            <p style="color:green;">You have been logged out</p>
+        </div>
+        <div>
+            <p>Don't have an account? <a th:href="@{/registration}">Register here</a></p>
+        </div>
+    </form>
+</div>
 </body>
 </html>
